--- a/interface/styles.css
+++ b/interface/styles.css
@@ -7,6 +7,7 @@ body {
 	font: 13px 'Open Sans', verdana;
    color: #505050;
    padding: 0px;
+   padding-top: 100px;
    margin: 0px;
 }
 
@@ -38,81 +39,77 @@ a:hover { color: rgb(175, 30, 30); }
 /* --- WRAPPER --- */
 
 #wrapper {
-   display: table;
    height: 100%;
-   width: 100%;
+   width: 500px;
+   margin: auto;
 }
 
-#menu, #innerbody {
-   display: table-cell;
-   vertical-align: top;
-   width: auto;
+#settings {
+   padding-bottom: 5px;
+   text-align: right;
 }
 
-#menu {
-   background: rgba(0, 0, 0, 0.226);
-   width: 250px;
-}
-
-#menu #options { overflow: auto; }
-#menu #options::-webkit-scrollbar { width: 7px; }
-#menu #options::-webkit-scrollbar-track { background: #00000038; }
-#menu #options::-webkit-scrollbar-thumb { background: rgba(253, 253, 253, 0.404); }
-
-#menu #options #inner { padding: 6px; }
-
-#menu #option {
-   background: rgba(255, 255, 255, 0.062);
-   border-bottom: 1px solid rgba(255, 255, 255, 0.062);
-   padding: 5px;
-   padding-left: 7px;
-   color: rgb(168, 168, 168);
-   margin-bottom: 2px;
-}
-
-#menu #option:last-child {
-   margin: 0px;
-}
-
-#menu #option:hover {
-   background: rgba(80, 255, 80, 0.158);
-   border-bottom: 1px solid rgba(80, 255, 80, 0.158);
+#regions, #capita, #highlow {
+   display: inline-block;
    cursor: pointer;
-   color: white;
 }
 
-#innerbody {
-   padding: 5px;
+.active, .inactive {
+   background: rgba(48, 214, 48, 0.233);
+   border-bottom: 2px solid rgba(48, 214, 48, 0.13);
+   padding: 5px 7px;
+   margin-left: 5px;
+   display: inline-block;
+   color: rgba(206, 206, 206, 0.658);
+   color: rgb(216, 216, 216);
 }
 
-#chart-tbl {
-   display: table;
-   height: 100%;
-   width: 100%;
+.inactive {
+   background: rgba(0, 0, 0, 0.26);
+   border-bottom: 2px solid rgba(0, 0, 0, 0.164);
+   color: rgba(255, 255, 255, 0.692);
 }
 
-#header, #content { display: table-row; }
-#header { height: 1px; }
-
-#header #inner {
-   background: rgba(0, 0, 0, 0.322);
-   padding: 7px;
-   padding-left: 9px;
+input {
+   background: rgba(59, 130, 197, 0.363);
+   background-image: url('../interface/img/search.png');
+   background-repeat: no-repeat;
+   background-position: right center;
+   border-bottom: 2px solid rgba(66, 136, 201, 0.233);
+   padding: 5px 7px;
    color: #CECECE;
-}
-
-#target {
-   color: rgba(102, 218, 102, 0.856);
-}
-
-#content #inner {
-   background: rgba(0, 0, 0, 0.192);
-   border: 2px solid rgba(0, 0, 0, 0.103);
-   border-top: 0px;
-   height: 100%;
-}
-
-#chart, svg {
-   height: 100%;
    width: 100%;
+   color: #e9e9e9;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+}
+
+input::placeholder {
+   color: rgb(216, 216, 216);
+}
+
+#options {
+   background: rgba(0, 0, 0, 0.336);
+   border: 2px solid rgba(0, 0, 0, 0.164);
+   border-right: 0px;
+   height: 300px;
+   overflow: auto; 
+}
+
+#options::-webkit-scrollbar { width: 7px; }
+#options::-webkit-scrollbar-track { background: #00000038; }
+#options::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.404); }
+
+#option {
+   padding: 5px 7px;
+   color: rgba(206, 206, 206, 0.74);
+}
+
+#option:nth-child(even) { background: rgba(0, 0, 0, 0.082); }
+
+#option:hover {
+   background: rgba(57, 206, 57, 0.158);
+   color: white;
+   cursor: pointer;
 }
