--- a/interface/styles.css
+++ b/interface/styles.css
@@ -83,23 +83,25 @@ input {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
+   cursor: pointer;
 }
 
 input::placeholder {
    color: rgb(216, 216, 216);
 }
 
-#options {
+#primary-options {
+   display: none;
    background: rgba(0, 0, 0, 0.336);
    border: 2px solid rgba(0, 0, 0, 0.164);
    border-right: 0px;
-   height: 300px;
-   overflow: auto; 
+   overflow: auto;
+   height: 224px;
 }
 
-#options::-webkit-scrollbar { width: 7px; }
-#options::-webkit-scrollbar-track { background: #00000038; }
-#options::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.404); }
+#primary-options::-webkit-scrollbar { width: 7px; }
+#primary-options::-webkit-scrollbar-track { background: #00000038; }
+#primary-options::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.404); }
 
 #option {
    padding: 5px 7px;
