--- a/interface/styles.css
+++ b/interface/styles.css
@@ -62,6 +62,7 @@ a:hover { color: rgb(175, 30, 30); }
    display: inline-block;
    color: rgba(206, 206, 206, 0.658);
    color: rgb(216, 216, 216);
+   transition: 0.1s;
 }
 
 .inactive {
@@ -84,6 +85,12 @@ input {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    cursor: pointer;
+   margin-bottom: 5px;
+}
+
+#secondary-search {
+   border-left: 2px solid rgba(66, 136, 201, 0.233);
+   text-align: left;
 }
 
 input::placeholder {
@@ -91,12 +98,19 @@ input::placeholder {
 }
 
 #primary-options {
-   display: none;
    background: rgba(0, 0, 0, 0.336);
    border: 2px solid rgba(0, 0, 0, 0.164);
    border-right: 0px;
    overflow: auto;
-   height: 224px;
+   max-height: 304px;
+   margin-top: 5px;
+   position: absolute;
+   width: inherit;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+   display: none;
+   z-index: 99;
 }
 
 #primary-options::-webkit-scrollbar { width: 7px; }
@@ -114,4 +128,47 @@ input::placeholder {
    background: rgba(57, 206, 57, 0.158);
    color: white;
    cursor: pointer;
+}
+
+#primary-chart {
+   background: rgba(0, 0, 0, 0.26);
+   border: 2px solid rgba(0, 0, 0, 0.164);
+   height: 300px;
+   margin-bottom: 5px;
+}
+
+svg {
+   width: 100%;
+   height: 100%;
+}
+
+.population-chart, .emission-chart, .capita-chart {
+   opacity: 0.4;
+   stroke-width: 2px;
+}
+
+.population-chart {
+   fill: rgba(37, 156, 37, 0.795);
+   stroke: rgba(61, 201, 61, 0.795);
+}
+
+.emission-chart {
+   fill: rgb(199, 63, 63);
+   stroke: rgb(223, 104, 104);
+}
+
+.capita-chart {
+   fill: rgb(33, 89, 141);
+   stroke: rgb(60, 121, 179);
+}
+
+line { stroke: rgba(255, 255, 255, 0.048); }
+
+.tick:nth-child(2) line {
+   stroke: rgb(47, 47, 47);
+}
+
+circle {
+   fill: rgba(255, 255, 255, 0.219);
+   z-index: 99;
 }
