--- a/interface/styles.css
+++ b/interface/styles.css
@@ -1,232 +1,3 @@
-@font-face { font-family: 'Open Sans'; src: url('fonts/main.woff'); }
-input, span, li { all: unset; }
-
-body {
-   background-color: rgb(56, 56, 56);
-   background-image: url('img/bg.png');
-	font: 13px 'Open Sans', verdana;
-   color: #505050;
-   padding: 0px;
-   margin: 0px;
-}
-
-a:link, a:visited, a:hover {
-	color: #0073A9;
-   transition: .3s;
-   cursor: pointer;
-   text-decoration: none;
-}
-
-a:hover { color: rgb(175, 30, 30); }
-
-/* --- SPLIT TABLE --- */
-
-.split {
-   display: table;
-   width: 100%
-}
-
-.split > div {
-   display: table-cell;
-   width: auto;
-   text-align: left;
-   vertical-align: top;
-}
-
-.split div:nth-child(2) { text-align: right; }
-
-/* --- WRAPPER --- */
-
-#wrapper {
-   width: 100%;
-   height: 100%;
-   display: table;
-}
-
-#wrapper #menu-outer, #wrapper .chart-outer {
-   display: table-row;
-   height: auto;
-   width: 100%;
-}
-
-#wrapper #menu-outer { height: 1px; }
-
-/* --- MENU --- */
-
-#menu {
-   background: rgba(0, 0, 0, 0.336);
-   border-bottom: 2px solid rgba(0, 0, 0, 0.164);
-   display: table;
-   width: 100%;
-}
-
-#menu div {
-   display: table-cell;
-   width: auto;
-   padding: 6px;
-   padding-bottom: 4px;
-}
-
-#menu div:last-child {
-   width:1%;
-   white-space: nowrap;
-   padding-left: 0px;
-}
-
-#regions, #capita, #highlow {
-   display: inline-block;
-   cursor: pointer;
-   margin-left: 5px;
-}
-
-#regions { margin: 0px; }
-
-.inactive, .active {
-   background: rgba(223, 78, 78, 0.233);
-   border-bottom: 2px solid rgba(224, 65, 65, 0.192);
-   color: rgba(255, 255, 255, 0.74);
-   padding: 5px 7px;
-   display: inline-block;
-   transition: 0.1s;
-}
-
-.active {
-   background: rgba(51, 202, 51, 0.199);
-   border-bottom: 2px solid rgba(48, 214, 48, 0.13);
-   color: white;
-}
-
-input {
-   background: rgba(59, 130, 197, 0.363);
-   background-image: url('../interface/img/search.png');
-   background-repeat: no-repeat;
-   background-position: right center;
-   border-bottom: 2px solid rgba(66, 136, 201, 0.233);
-   padding: 5px 7px;
-   color: #CECECE;
-   width: 100%;
-   color: #e9e9e9;
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box;
-   cursor: pointer;
-}
-
-input::placeholder { color: rgb(216, 216, 216); }
-
-/* --- OPTIONS --- */
-
-#options {
-   background: rgb(32, 32, 32);
-   border: 2px solid rgba(0, 0, 0, 0.164);
-   border-right: 0px;
-   border-top: 0px;
-   overflow: auto;
-   width: 100%;
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box;
-   max-height: 224px;
-   position: absolute;
-   display: none;
-   z-index: 99;
-}
-
-#options::-webkit-scrollbar { width: 7px; }
-#options::-webkit-scrollbar-track { background: #00000038; }
-#options::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.404); }
-
-#option {
-   padding: 5px 7px;
-   color: rgba(206, 206, 206, 0.74);
-}
-
-#option:nth-child(even) { background: rgba(0, 0, 0, 0.082); }
-
-#option:hover {
-   background: rgba(57, 206, 57, 0.158);
-   color: white;
-   cursor: pointer;
-}
-
-/* --- CHARTS --- */
-
-#population-chart, #emission-chart, #capita-chart {
-   width: 100%;
-   height: 100%;
-   padding: 5px;
-   padding-bottom: 0px;
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box;
-   position: relative;
-}
-
-#capita-chart { padding-bottom: 5px; }
-
-.header {
-   position: absolute;
-   left: 15px;
-   top: 11px;
-   color: rgba(255, 255, 255, 0.945);
-   pointer-events: none;
-   z-index: -1;
-}
-
-.inner {
-   width: 100%;
-   height: 100%;
-   background: rgba(0, 0, 0, 0.26);
-   border: 2px solid rgba(0, 0, 0, 0.164);
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box;
-}
-
-svg {
-   width: 100%;
-   height: 100%;
-}
-
-/* --- CHARTS GADGETS --- */
-
-line {
-   stroke: rgba(255, 255, 255, 0.048);
-   stroke-width: 4px;
-   z-index: 99;
-}
-
-line:hover {
-   stroke: rgba(255, 255, 255, 0.192);
-}
-
-.population-area, .emission-area, .capita-area {
-   opacity: 0.6;
-}
-
-.population-area {
-   fill: rgba(37, 156, 37, 0.795);
-   stroke: rgba(61, 201, 61, 0.795);
-}
-
-.emission-area {
-   fill: rgb(199, 63, 63);
-   stroke: rgb(223, 104, 104);
-}
-
-.capita-area {
-   fill: rgb(33, 89, 141);
-   stroke: rgb(60, 121, 179);
-}
-
-#tooltip {
-   position: absolute;
-   left: 20px;
-   top: 20px;
-   background: white;
-   padding: 5px 7px;
-   display: none;
-   opacity: 0;
-   pointer-events: none;
-   transition: 0.6s;
-}
+@import url('css/general.css');
+@import url('css/menu.css');
+@import url('css/charts.css');
