--- a/interface/css/menu.css
+++ b/interface/css/menu.css
@@ -75,6 +75,10 @@ input::placeholder { color: rgb(216, 216, 216); }
    position: absolute;
    display: none;
    z-index: 99;
+
+   /* FIREFOX */
+   scrollbar-color: rgba(255, 255, 255, 0.404) #00000038;
+   scrollbar-width: thin;
 }
 
 #options::-webkit-scrollbar { width: 7px; }
