--- a/interface/css/charts.css
+++ b/interface/css/charts.css
@@ -18,6 +18,7 @@
    color: rgba(255, 255, 255, 0.945);
    pointer-events: none;
    z-index: -1;
+   text-shadow: 1px 1px #242424;
 }
 
 .inner {
@@ -28,11 +29,15 @@
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
+   position: relative;
 }
 
 svg {
    width: 100%;
    height: 100%;
+   position: absolute;
+	top: 0;
+	left: 0;
 }
 
 /* --- GADGETS --- */
@@ -76,9 +81,24 @@ circle:hover {
 }
 
 #tooltip {
-   background: white;
    position: absolute;
-   padding: 3px 5px;
    border-radius: 4px;
    display: none;
+}
+
+#tooltip #year, #tooltip #value {
+   padding: 3px 5px;
+   display: inline-block;
+   background: white;
+}
+
+#tooltip #year {
+   margin-right: 2px;
+   border-top-left-radius: 4px;
+   border-bottom-left-radius: 4px;
+}
+
+#tooltip #value {
+   border-top-right-radius: 4px;
+   border-bottom-right-radius: 4px;
 }
