--- a/interface/css/menu.css
+++ b/interface/css/menu.css
@@ -22,6 +22,7 @@
    display: inline-block;
    cursor: pointer;
    margin-left: 5px;
+   text-shadow: 1px 1px #242424;
 }
 
 #regions { margin: 0px; }
@@ -55,6 +56,7 @@ input {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    cursor: pointer;
+   text-shadow: 1px 1px #242424;
 }
 
 input::placeholder { color: rgb(216, 216, 216); }
@@ -75,6 +77,7 @@ input::placeholder { color: rgb(216, 216, 216); }
    position: absolute;
    display: none;
    z-index: 99;
+   text-shadow: 1px 1px #242424;
 
    /* FIREFOX */
    scrollbar-color: rgba(255, 255, 255, 0.404) #00000038;
